tooling/nargo_cli/tests/snapshots/execution_success/global_slice_rc_regression_8259/execute__tests__expanded.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: expanded_code
---
global G_C: [bool] = &[true, false, true];

fn main(a: bool) {
    println(func_1(a, G_C));
    println(G_C);
}

fn func_1(a: bool, mut b: [bool]) -> [bool] {
    b[1] = a;
    b
}
